# airline-passenger-satisfaction-random-forest

./: .env  README.md  data_analysis.py  data_preprocessing.py  helpers.py  main.py  model_training.py  pyproject.toml
